<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trip_custom_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:background="@drawable/popup_custom_layout"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:background="#e9e9e9"
            android:gravity="center" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/ic_trip_tracking"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="#000000" />

        <TextView android:id="@+id/trip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#2a2e43"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/trip_track"
            android:layout_margin="10dp"
            android:layout_toRightOf="@id/img"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff4f9a"
            android:textSize="12sp"
            android:text="@string/more_loc"
            android:layout_marginLeft="60dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_toRightOf="@id/trip_text"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <TextView android:id="@+id/from_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/from"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#2a2e43"
            android:layout_alignParentLeft="true"/>

        <TextView android:id="@+id/to_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/to"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#2a2e43"
            android:layout_toRightOf="@id/from_txt"
            android:layout_alignParentRight="true"
            android:gravity="end"/>
    </RelativeLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:weightSum="100"
        android:orientation="horizontal">

        <EditText android:id="@+id/from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="#2a2e43"/>

        <EditText android:id="@+id/to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:textColor="#2a2e43"
            android:gravity="end"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView android:id="@+id/plan_time_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/datetime"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#2a2e43"
            android:layout_weight="1"/>

        <ImageView android:id="@+id/calendar"
            android:layout_width="20dp"
            android:layout_height="20.5dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/calendar"
            android:layout_gravity="right"/>
    </LinearLayout>

    <EditText android:id="@+id/date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="#2a2e43"/>

    <CheckBox
        android:id="@+id/chkIos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="20dp"
        android:text="@string/via_txt"
        android:textColor="#83899e"
        android:textSize="14sp"/>

    <EditText android:id="@+id/via"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="#2a2e43"
        android:enabled="true"/>

    <Button android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/next_txt"
        android:textColor="#ffffff"
        android:enabled="false"
        android:background="@drawable/nxtbtn_custom_layout"/>

</LinearLayout>