<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contact_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:lineSpacingExtra="4sp"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/contact_txt"
            android:textColor="#de4d9a"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/contact_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_txt"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:lineSpacingExtra="4sp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/contact_msg"
            android:textColor="#83899e"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/contactInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_msg"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="20dp"
            android:lineSpacingExtra="4sp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:drawableRight="@drawable/ic_contact"
            android:hint="@string/contact"
            android:inputType="phone"
            android:paddingBottom="18dp"
            android:textCursorDrawable="@drawable/black_cursor"
            android:textSize="16sp"
            android:textColor="@color/gray_text"
            app:backgroundTint="@color/light_gray" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
