<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

        <TextView
            android:id="@+id/signup_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/sign_up_text"
            android:textColor="#de4d9a"
            android:textSize="20sp"
            android:fontFamily="@font/source_sans_pro_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signup_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:lineSpacingExtra="4sp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:text="@string/sign_up_msg"
            android:textColor="#83899e"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_txt" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:lineSpacingExtra="4sp"
            android:hint="@string/surname"
            android:fontFamily="@font/source_sans_pro_regular"
            android:inputType="text"
            android:paddingBottom="18dp"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/black_cursor"
            android:textSize="16sp"
            app:backgroundTint="@color/light_gray"
            android:textColor="@color/gray_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_msg" />

        <Spinner
            android:id="@+id/birth_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:entries="@array/birthyear_dropdown_arrays"
            android:fontFamily="@font/source_sans_pro_regular"
            android:lineSpacingExtra="4sp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameInput" />

        <TextView
            android:id="@+id/birth_div"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@color/light_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birth_year" />

        <Spinner
            android:id="@+id/profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:entries="@array/profession_dropdown_arrays"
            android:fontFamily="@font/source_sans_pro_regular"
            android:lineSpacingExtra="4sp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birth_div" />

        <TextView
            android:id="@+id/profession_div"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@color/light_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profession" />

</android.support.constraint.ConstraintLayout>